tests/type-errors/no_side_effect_in_function3.arl
archetype no_side_effect_in_function3

asset my_asset {
  a : nat
}

function f () : bool {
  my_asset.add({1});
  return false
}

entry exec () {
  var b = f()
}
